添加用户查询接口到swagger
